--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Secure Text Sync App</title>
+  <title>Secure Text Sync</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
   <style>
     body {
       background-color: #f8f9fa;
     }
 
     .container {
-      max-width: 600px;
+      max-width: 650px;
       margin-top: 40px;
     }
 
@@ -25,12 +26,18 @@
     textarea {
       resize: none;
     }
+
+    #qrcode {
+      text-align: center;
+      margin-top: 20px;
+    }
   </style>
 </head>
 
 <body>
+
   <div class="container">
-    <h2 class="text-center mb-4">🔐 Secure Text Sync (Firebase Auth)</h2>
+    <h2 class="text-center mb-4">🔐 Secure Text Sync with QR</h2>
 
     <!-- Auth Form -->
     <div id="auth-form">
@@ -45,18 +52,20 @@
     <!-- Main App -->
     <div id="main-app">
       <textarea class="form-control mb-3" id="text-input" rows="6" placeholder="Your private text..."></textarea>
-      <div class="d-flex gap-2 mb-3">
+      <div class="d-flex gap-2 mb-3 flex-wrap">
         <button class="btn btn-success" id="save-btn">💾 Save</button>
         <button class="btn btn-info" id="load-btn">📥 Load</button>
         <button class="btn btn-secondary" id="copy-btn">📋 Copy</button>
+        <button class="btn btn-warning" id="copy-qr-btn">📷 Copy QR</button>
         <button class="btn btn-danger ms-auto" id="clear-btn">🧹 Clear</button>
       </div>
       <button class="btn btn-outline-dark w-100" id="logout-btn">🚪 Logout</button>
+      <div id="qrcode"></div>
       <div id="status" class="mt-3"></div>
     </div>
   </div>
 
-  <!-- Import JavaScript Module -->
+  <!-- Main Logic -->
   <script type="module" src="secureTextApp.obf.js"></script>
 </body>
 
